--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +21,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Toolbox">
+      <HintPath>..\..\..\..\Desktop\Publish\Toolbox.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
