--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -8,12 +8,21 @@
 
   <ItemGroup>
     <Folder Include="Middlewares\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Toolbox">
+      <HintPath>..\..\..\..\Desktop\Publish\Toolbox.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
