--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Reference Include="Toolbox">
       <HintPath>..\..\..\..\Desktop\Publish\Toolbox.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
 
