--- a/UI.MVC/appsettings.json
+++ b/UI.MVC/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": ""
+  },
+  "EmailSenderOptions": {
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "User": "sender@example.com",
+    "Password": "P@ssw0rd"
+  },
+  "Constants": {
+    "Logo": "https://picsum.photos/150",
+    "Title": "Net 6.0 Demo",
+    "SocialIcons": [
+      { "Twitter1": "asdasdasdads" },
+      { "Twitter2": "asdasdasdads" },
+      { "Twitter3": "asdasdasdads" }
+    ]
+  }
 }
